Box no longer moves and made sure the overflow is hidden.

--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,12 @@
     border: 5px solid black;
     font-size: 4rem;
     font-weight: bold;
-    padding: 40px;
-    max-height: 250px;
+    padding: 100px;
+    overflow: hidden;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 
